--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
+    "reselect": "^5.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
